samples/_failures_safe/1761561658_a33717_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52ab5444.c: In function ‘primMST’:
./samples/SAFE/__tmp_52ab5444.c:144:5: error: expected expression at end of input
  144 |     heap->pos[0] =
      |     ^~~~
./samples/SAFE/__tmp_52ab5444.c:144:5: error: expected declaration or statement at end of input
